added subsection about seeing enhancer in my future section

--- a/files/header/Robin.bib
+++ b/files/header/Robin.bib
@@ -109,7 +109,6 @@
 	author		= {Gabi Warnke},
 	title		= {Auf dem Weg zu intelligenten Prothesen},
 	journaltitle	= {Spektrum der Wissenschaft},
-	issuetitle	= {Zukunft},
 	url		= {http://www.spektrum.de/alias/bionik/auf-dem-weg-zu-intelligenten-prothesen/1058095},
 	urldate		= {2012-02-26},
 	year		= {2011},
@@ -228,5 +227,16 @@
 	urldate		= {2012-06-24},
 	year		= {2010},
 	month		= {11},
+}
+
+@article{Heise:TR:Project_Glass,
+	keywords	= {Robin},
+	author		= {John Pavlus},
+	title		= {Blick hinter Googles Gläser},
+	journaltitle	= {Technology Review},
+	url		= {http://heise.de/-1517576},
+	urldate		= {2012-06-24},
+	year		= {2012},
+	month		= {04},
 }
 
