added more text about seeing enhancer

--- a/files/header/Robin.bib
+++ b/files/header/Robin.bib
@@ -240,3 +240,38 @@
 	month		= {04},
 }
 
+@article{MIT:Protect_implants_from_attack,
+	keywords	= {Robin},
+	author		= {Larry Hardesty},
+	title		= {Protecting medical implants from attack},
+	subtitle	= {A new system would jam wireless signals sent to medical implants by unauthorized users}
+	language	= {english},
+	journaltitle	= {MIT News},
+	url		= {http://web.mit.edu/newsoffice/2011/protecting-medical-implants-0613.html},
+	urldate		= {2012-06-24},
+	year		= {2011},
+	month		= {06},
+}
+
+@article{Heise:Pacemaker_Hacker,
+	keywords	= {Robin},
+	author		= {Daniel Bachfeld},
+	title		= {Ein Herz für Hacker: Schrittmacher mit Funkschnittstelle},
+	journaltitle	= {Heise Security},
+	url		= {http://heise.de/-189714},
+	urldate		= {2012-06-24},
+	year		= {2008},
+	month		= {03},
+}
+
+@article{DRadio:strahlendes_Herz,
+	keywords	= {Robin},
+	author		= {Daniel Münter},
+	title		= {Strahlendes Herz},
+	journaltitle	= {DRadio Wissen},
+	url		= {http://wissen.dradio.de/herzschrittmacher-strahlendes-herz.35.de.html?dram:article_id=15091},
+	urldate		= {2012-06-24},
+	year		= {2012},
+	month		= {02},
+}
+
