added more text to my future section

--- a/files/header/Robin.bib
+++ b/files/header/Robin.bib
@@ -244,7 +244,7 @@
 	keywords	= {Robin},
 	author		= {Larry Hardesty},
 	title		= {Protecting medical implants from attack},
-	subtitle	= {A new system would jam wireless signals sent to medical implants by unauthorized users}
+	subtitle	= {A new system would jam wireless signals sent to medical implants by unauthorized users},
 	language	= {english},
 	journaltitle	= {MIT News},
 	url		= {http://web.mit.edu/newsoffice/2011/protecting-medical-implants-0613.html},
