--- a/Kompetenzpruefung.tex
+++ b/Kompetenzpruefung.tex
@@ -67,6 +67,9 @@
 \input{files/chapters/Joshuah/main}
 
 
+%\input{files/chapters/reflexion}
+
+
 \setcounter{sectionsV}{\value{section}}		%% Speichert die sectionnummer vor \appendix zwischen
 \appendix	%% Sorgt für Buchstaben im Inhaltsverzeichnis
 
