added more content and optimized

--- a/files/header/Robin.bib
+++ b/files/header/Robin.bib
@@ -275,3 +275,17 @@
 	month		= {02},
 }
 
+@article{Spiegel:Herzschrittmacher-Prozess,
+	keywords	= {Robin},
+	author		= {Gerhard Mauz},
+	title		= {Das pseudomoralische Das tut man nicht},
+	subtitle	= {Gerhard Mauz zum Urteil im Kölner \enquote{Herzschrittmacher-Prozeß}},
+	pages		= {58-59},
+	journaltitle	= {Der Spiegel},
+	url		= {http://www.spiegel.de/spiegel/print/d-14022251.html},
+	urldate		= {2012-06-27},
+	volume		= {4},
+	year		= {1983},
+	month		= {01},
+}
+
