--- a/files/header/metainfos.tex
+++ b/files/header/metainfos.tex
@@ -6,7 +6,7 @@
 \SetKLASSE{12}
 \SetSUBJECT{Veränderung und Beeinflussung des Menschen}
 \SetURL{http://robin.de.marissa.hostorama.ch/Klasse/12/Kompetenzpruefung.pdf}
-\SetLICENSE[Creative Commons BY-NC-ND]{CreativeCommons/by-nc-nd}{0}
+\SetLICENSE[Creative Commons BY-NC-SA]{CreativeCommons/by-nc-sa}{0}
 %% von Joshuah und Hannah mündlich akzeptiert
 \SetCREATEDATE{2011}{10}{18}{20}{46}{23}		%% {YYYY}{MM}{DD}{HH}{MM}{SS}
 \SetABGABEDATUM{2}{2012}{06}{29}{1}		%% um 12:45
