added personal reflexion

--- a/Kompetenzpruefung.tex
+++ b/Kompetenzpruefung.tex
@@ -67,7 +67,7 @@
 \input{files/chapters/Joshuah/main}
 
 
-%\input{files/chapters/reflexion}
+\input{files/chapters/reflexion}
 
 
 \setcounter{sectionsV}{\value{section}}		%% Speichert die sectionnummer vor \appendix zwischen
