added literature database

--- a/Kompetenzpruefung.tex
+++ b/Kompetenzpruefung.tex
@@ -60,7 +60,7 @@
 %%%%%%%%%%%
 %\input{files/chapters/preface}
 
-%\include{files/chapters/Hannah/main}
+\input{files/chapters/Hannah/main}
 
 \input{files/chapters/Robin/main}
 
