--- a/Kompetenzpruefung.tex
+++ b/Kompetenzpruefung.tex
@@ -37,6 +37,7 @@
 \bibliography{
 	files/header/Robin,
 	files/header/Joshuah,
+	files/header/Hannah,
 }
 \usepackage{
 	schoolPDFinfoRS,
@@ -73,7 +74,7 @@
 \setcounter{sectionsV}{\value{section}}		%% Speichert die sectionnummer vor \appendix zwischen
 \appendix	%% Sorgt für Buchstaben im Inhaltsverzeichnis
 
-%\nocite{*}
+\nocite{*}
 
 \vfill
 \section*{Urheberrechte und Lizenzhinweise}
@@ -88,7 +89,7 @@ und stammt von Look Bellow.
 	\newpage
 	\include{files/chapters/Planung-Recherche}
   \Statistiken
-  Status:~\progressbar{.23} (eigenes Ermessen) \\
+  Status:~\progressbar{.26} (eigenes Ermessen) \\
   \href{http://robin.de.marissa.hostorama.ch/tmp/Realschulabschluss-Countdown.html}%
 	{Countdown zur Kompetenzprüfung und den Realschulprüfungen (Webseite)}
   \newpage
