--- a/files/header/Hannah.bib
+++ b/files/header/Hannah.bib
@@ -21,7 +21,7 @@
 %	month		= {07},
 }
 
-@article{Mueller:im_kampf_mit_dem_eigenen_koerper,
+@article{Spiegel:body-modification-lust-am-horror-koerper,
 	keywords	= {Hannah},
 	author		= {Heike Le Ker},
 	title		= {Body Modification},
