optimized literature database from Joshuah

--- a/Kompetenzpruefung.tex
+++ b/Kompetenzpruefung.tex
@@ -64,9 +64,9 @@
 
 \input{files/chapters/Hannah/main}
 
-%\input{files/chapters/Robin/main}
+\input{files/chapters/Robin/main}
 
-%\input{files/chapters/Joshuah/main}
+\input{files/chapters/Joshuah/main}
 
 
 %\input{files/chapters/reflexion}
@@ -90,7 +90,7 @@ und stammt von Look Bellow.
 	\newpage
 	\include{files/chapters/Planung-Recherche}
   \Statistiken
-  Status:~\progressbar{.26} (eigenes Ermessen) \\
+  Status:~\progressbar{.55} (eigenes Ermessen) \\
   \href{http://robin.de.marissa.hostorama.ch/tmp/Realschulabschluss-Countdown.html}%
 	{Countdown zur Kompetenzprüfung und den Realschulprüfungen (Webseite)}
   \newpage
