--- a/files/header/Joshuah.bib
+++ b/files/header/Joshuah.bib
@@ -1,6 +1,6 @@
 %% Duden (2007). Duden. Fremdwörterbuch. 6. Auflage. Mannheim: Dudenverlag.
 %% http://d-nb.info/985088052
-@book{Duden,
+@book{Duden:Fremdwoerterbuch,
 	keywords	= {Joshuah},
 	author		= {Ursula Kraif},
 	title		= {Duden},
