--- a/files/header/Hannah.bib
+++ b/files/header/Hannah.bib
@@ -23,7 +23,7 @@
 
 @article{Spiegel:body-modification-lust-am-horror-koerper,
 	keywords	= {Hannah},
-	author		= {Heike Le Ker},
+	author		= {Heike {Le Ker}},
 	title		= {Body Modification},
 	subtitle	= {Lust am Horror-Körper},
 	journaltitle	= {Der Spiegel},
@@ -71,7 +71,7 @@
 	keywords	= {Hannah},
 	author		= {Wikipedia},
 	title		= {Attraktivitätsforschung},
-	url		= {http://de.wikipedia.org/w/index.php?title=Attraktivitätsforschung&oldid=99586076},
+	url		= {http://de.wikipedia.org/w/index.php?title=Attraktivitaetsforschung&oldid=99586076},
 	urldate		= {2012-06-27},
 }
 
@@ -87,7 +87,7 @@
 	keywords	= {Hannah},
 	author		= {Wikipedia},
 	title		= {Schönheitsideal},
-	url		= {http://de.wikipedia.org/w/index.php?title=Schönheitsideal&oldid=104183870},
+	url		= {http://de.wikipedia.org/w/index.php?title=Schoenheitsideal&oldid=104183870},
 	urldate		= {2012-06-27},
 }
 
