--- a/Kompetenzpruefung.tex
+++ b/Kompetenzpruefung.tex
@@ -69,7 +69,7 @@
 \input{files/chapters/Joshuah/main}
 
 
-%\input{files/chapters/reflexion}
+\input{files/chapters/reflexion}
 
 
 \setcounter{sectionsV}{\value{section}}		%% Speichert die sectionnummer vor \appendix zwischen
