--- a/Kompetenzpruefung.tex
+++ b/Kompetenzpruefung.tex
@@ -60,7 +60,7 @@
 
 \setcounter{headpages}{\value{page}}\newpage\pagenumbering{arabic}
 %%%%%%%%%%%
-%\input{files/chapters/preface}
+\input{files/chapters/preface}
 
 \input{files/chapters/Hannah/main}
 
