added more content to my future section

--- a/files/header/Robin.bib
+++ b/files/header/Robin.bib
@@ -65,6 +65,20 @@
 	pages		= {48-51},
 }
 
+@article{Heise:Telepolis:Mensch:gl,
+	keywords	= {Robin},
+	author		= {Peter Mühlbauer},
+	title		= {Christentum 2.0},
+	subtitle	= {Das globale Gehirn als werdender Gott},
+	journaltitle	= {Telepolis -- Heise Zeitschriften Verlag},
+	issuetitle	= {Mensch+},
+	url		= {https://www.heise.de/kiosk/special/tp/12/01/},
+	urldate		= {2012-02-25},
+	year		= {2012},
+	month		= {01},
+	pages		= {74-77},
+}
+
 @article{Heise:Telepolis:Zukunft:Zukunft_des_Wissens,
 	keywords	= {Robin},
 	author		= {Goedart Palm},
