--- a/Kompetenzpruefung.tex
+++ b/Kompetenzpruefung.tex
@@ -60,9 +60,9 @@
 
 \setcounter{headpages}{\value{page}}\newpage\pagenumbering{arabic}
 %%%%%%%%%%%
-\input{files/chapters/preface}
+%\input{files/chapters/preface}
 
-\input{files/chapters/Hannah/main}
+%\input{files/chapters/Hannah/main}
 
 \input{files/chapters/Robin/main}
 
