--- a/files/header/Robin.bib
+++ b/files/header/Robin.bib
@@ -1,7 +1,8 @@
 @article{Heise:Telepolis:Mensch:Cyborg,
 	keywords	= {Robin},
 	author		= {Matthias Gräbner},
-	title		= {Auf dem Weg zum Cyborg: Ersatzteile für den menschlichen Körper},
+	title		= {Auf dem Weg zum Cyborg},
+	subtitle	= {Ersatzteile für den menschlichen Körper},
 	journaltitle	= {Telepolis -- Heise Zeitschriften Verlag},
 	issuetitle	= {Mensch+},
 	url		= {https://www.heise.de/kiosk/special/tp/12/01/},
@@ -16,7 +17,8 @@
 @article{Heise:Telepolis:Mensch:Unsterblichkeit,
 	keywords	= {Robin},
 	author		= {Harald Zaun},
-	title		= {Unsterblichkeit ist durchaus denkbar!: Andreas Eschbach im Gespräch},
+	title		= {Unsterblichkeit ist durchaus denkbar!},
+	subtitle	= {Andreas Eschbach im Gespräch},
 	journaltitle	= {Telepolis -- Heise Zeitschriften Verlag},
 	issuetitle	= {Mensch+},
 	url		= {https://www.heise.de/kiosk/special/tp/12/01/},
@@ -29,7 +31,8 @@
 @article{Heise:Telepolis:Mensch:Synthetische_Biologie,
 	keywords	= {Robin},
 	author		= {Matthias Gräbner},
-	title		= {Synthetische Biologie: Leben erschaffen nach dem Lego-Prinzip},
+	title		= {Synthetische Biologie},
+	subtitle	= {Leben erschaffen nach dem Lego-Prinzip},
 	journaltitle	= {Telepolis -- Heise Zeitschriften Verlag},
 	issuetitle	= {Mensch+},
 	url		= {https://www.heise.de/kiosk/special/tp/12/01/},
@@ -42,7 +45,8 @@
 @article{Heise:Telepolis:Mensch:Ersatzorgane,
 	keywords	= {Robin},
 	author		= {Andrea Naica-Loebell},
-	title		= {Zelluläre Universaltalente und Ersatzorgane: Möglichkeiten und Gefahren der Stammzellenforschung},
+	title		= {Zelluläre Universaltalente und Ersatzorgane},
+	subtitle	= {Möglichkeiten und Gefahren der Stammzellenforschung},
 	journaltitle	= {Telepolis -- Heise Zeitschriften Verlag},
 	issuetitle	= {Mensch+},
 	url		= {https://www.heise.de/kiosk/special/tp/12/01/},
@@ -55,7 +59,8 @@
 @article{Heise:Telepolis:Mensch:Neuroimplantate,
 	keywords	= {Robin},
 	author		= {Matthias Becker},
-	title		= {Risiko Neuroimplantate: Gehirn-Operationen an wachen Patienten},
+	title		= {Risiko Neuroimplantate},
+	subtitle	= {Gehirn-Operationen an wachen Patienten},
 	journaltitle	= {Telepolis -- Heise Zeitschriften Verlag},
 	issuetitle	= {Mensch+},
 	url		= {https://www.heise.de/kiosk/special/tp/12/01/},
@@ -65,7 +70,7 @@
 	pages		= {48-51},
 }
 
-@article{Heise:Telepolis:Mensch:gl,
+@article{Heise:Telepolis:Mensch:globales_Gehirn,
 	keywords	= {Robin},
 	author		= {Peter Mühlbauer},
 	title		= {Christentum 2.0},
@@ -82,7 +87,8 @@
 @article{Heise:Telepolis:Zukunft:Zukunft_des_Wissens,
 	keywords	= {Robin},
 	author		= {Goedart Palm},
-	title		= {Zukunft des Wissens: Der Übergang menschlichen Wissens in kognitive Superstrukturen},
+	title		= {Zukunft des Wissens},
+	subtitle	= {Der Übergang menschlichen Wissens in kognitive Superstrukturen},
 	journaltitle	= {Telepolis -- Heise Zeitschriften Verlag},
 	issuetitle	= {Zukunft},
 	url		= {https://www.heise.de/kiosk/special/tp/09/01/},
@@ -95,7 +101,8 @@
 @article{Heise:Telepolis:Zukunft:Transhumanismus,
 	keywords	= {Robin},
 	author		= {Bernd Vowinkel},
-	title		= {Transhumanismus: Zwischen denkenden Androiden und fühlenden Cyborgs},
+	title		= {Transhumanismus},
+	subtitle	= {Zwischen denkenden Androiden und fühlenden Cyborgs},
 	journaltitle	= {Telepolis -- Heise Zeitschriften Verlag},
 	issuetitle	= {Zukunft},
 	url		= {https://www.heise.de/kiosk/special/tp/09/01/},
@@ -108,7 +115,8 @@
 @article{Heise:Telepolis:Zukunft:Metaintelligenz,
 	keywords	= {Robin},
 	author		= {Herbert W. Franke},
-	title		= {Metaintelligenz: Wie und wohin sich unsere Intelligenz entwickeln könnte},
+	title		= {Metaintelligenz},
+	subtitle	= {Wie und wohin sich unsere Intelligenz entwickeln könnte},
 	journaltitle	= {Telepolis -- Heise Zeitschriften Verlag},
 	issuetitle	= {Zukunft},
 	url		= {https://www.heise.de/kiosk/special/tp/09/01/},
@@ -301,5 +309,16 @@
 	volume		= {4},
 	year		= {1983},
 	month		= {01},
+}
+
+@article{Mauz:Myoelektrische-Prothesen,
+	keywords	= {Robin},
+	author		= {Sandra Trauner},
+	title		= {Durch Muskeln bewegt: Myoelektrische Prothesen},
+	journaltitle	= {n-tv Nachrichtenfernsehen GmbH},
+	url		= {http://www.n-tv.de/wissen/Myoelektrische-Prothesen-article22306.html},
+	urldate		= {2012-06-28},
+	year		= {2008},
+	month		= {06},
 }
 
