added all of his documents

--- a/files/header/Joshuah.bib
+++ b/files/header/Joshuah.bib
@@ -62,3 +62,19 @@
 	month		= {06},
 }
 
+@online{Wikipedia:Manipulation,
+	keywords	= {Joshuah},
+	author		= {Wikipedia},
+	title		= {Manipulation},
+	url		= {http://de.wikipedia.org/w/index.php?title=Manipulation&oldid=104865617},
+	urldate		= {2012-06-28},
+}
+
+@online{Stuttgart:Manipulation,
+	keywords	= {Joshuah},
+%	author		= {Wikipedia},
+	title		= {Stuttgart Alles nur noch Manipulation?},
+	url		= {http://www.medieninfo.bayern.de/download.asp?DownloadFileID=d74e384c6fa3276300c5093cee041ade},
+	urldate		= {2012-06-28},
+}
+
