--- a/files/header/metainfos.tex
+++ b/files/header/metainfos.tex
@@ -1,7 +1,7 @@
 \readgitstat{7}
 \SetTITEL{Kompetenzprüfung}
 \SetAUTHOR{4}{Joshuah Bärmann, Hannah Haid, Robin Schneider}
-\newcommand{\Betreuer}{Frau Inga Danielle Feger und Herr Dr. Manfred Steingraber\xspace}
+\newcommand{\Betreuer}{Frau Inga Danielle Feger und Herrn Dr. Manfred Steingraber\xspace}
 \newcommand{\SchoolSubjects}{Biologie, Geschichte}
 \SetKLASSE{12}
 \SetSUBJECT{Veränderung und Beeinflussung des Menschen}
