--- a/Kompetenzpruefung.tex
+++ b/Kompetenzpruefung.tex
@@ -46,7 +46,7 @@
 }
 %\SetDraft{on}
 \input{files/header/hacks}
-%\renewcommand{\imageresize}{-resize}
+\renewcommand{\imageresize}{-resize}
 %%%Body
 \begin{document}
 \pdfbookmark[1]{\Titlepagename}{titlepage}\pagenumbering{Roman}\thispagestyle{empty}
@@ -61,61 +61,58 @@
 
 \setcounter{headpages}{\value{page}}\newpage\pagenumbering{arabic}
 %%%%%%%%%%%
-\input{files/chapters/preface}
+\include{files/chapters/preface}
 
-\input{files/chapters/Hannah/main}
+\include{files/chapters/Hannah/main-Hannah}
 
-\input{files/chapters/Robin/main}
+\input{files/chapters/Robin/main-Robin}
 
-\input{files/chapters/Joshuah/main}
+\include{files/chapters/Joshuah/main-Joshuah}
 
 
-\input{files/chapters/reflexion}
-
+\include{files/chapters/reflexion}
 
 \setcounter{sectionsV}{\value{section}}		%% Speichert die sectionnummer vor \appendix zwischen
 \appendix	%% Sorgt für Buchstaben im Inhaltsverzeichnis
 
 %\nocite{*}
 
-\vfill
 \section*{Urheberrechte und Lizenzhinweise}
 Das Bild \enquote{\href{\URLTitlepageBG}{Der vitruvianische Mensch}},
 das auf der \hyperref[titlepage]{Titelseite} abgebildet ist, steht unter
 \href{http://creativecommons.org/licenses/by-sa/3.0/deed.de}{Creative Commons BY-SA 3.0}
 und stammt von Look Bellow.
+
+\vfill
 \printURLlong
 \printlicense
 \printendsignature
 
-\ifDraft{
-	\newpage
-	\include{files/chapters/Planung-Recherche}
-}{}
+\newpage
+\include{files/chapters/planning-enquiry}
+%\ifDraft{
   \Statistiken
-  Status:~\progressbar{.93} (eigenes Ermessen) \\
-  \href{http://robin.de.marissa.hostorama.ch/tmp/Realschulabschluss-Countdown.html}%
-	{Countdown zur Kompetenzprüfung und den Realschulprüfungen (Webseite)}
-  \newpage
+  Status:~\progressbar{.94} (eigenes Ermessen) \\
   \begin{sourcefiletable}{1}
 	\sourcefile{Hauptdatei}{\jobname.tex}
     \Isourcefile{\LaTeX-Hacks}{files/header/hacks.tex}
 	\Isourcefile{Metainformationen}{files/header/metainfos.tex}
 	\Isourcefile{\hyperref[titlepage]{\Titlepagename}}{files/titlepage/titlepage.tex}
 	\sourcefile{\nameref{sec:preface}}{files/chapters/preface.tex}
-	\sourcefile{\hyperref[sec:Hannah_Haid]{Teil Hannah}}{files/chapters/Hannah/main.tex}
+	\Isourcefile{\hyperref[sec:Hannah_Haid]{Teil Hannah}}{files/chapters/Hannah/main-Hannah.tex}
 	\Isourcefile{Literaturdatenbank Hannah}{files/header/Hannah.bib}
-	\sourcefile{\hyperref[sec:Robin_Schneider]{Teil Robin}}{files/chapters/Robin/main.tex}
+	\sourcefile{\hyperref[sec:Robin_Schneider]{Teil Robin}}{files/chapters/Robin/main-Robin.tex}
 	\sourcefile{Robin: \nameref{sec:Robin:historical_overview}}{files/chapters/Robin/history.tex}
 	\sourcefile{Robin: \nameref{sec:Robin:topical}}{files/chapters/Robin/topical.tex}
 	\sourcefile{Robin: \nameref{sec:Robin:experiments}}{files/chapters/Robin/experiments.tex}
 	\sourcefile{Robin: \nameref{sec:Robin:future}}{files/chapters/Robin/future.tex}
-	\Isourcefile{Manuskript Robin}{files/chapters/tmp/Manuskript_Robin_Kompetenzpruefung.odt}
+%	\Isourcefile{Manuskript Robin}{files/chapters/tmp/Manuskript_Robin_Kompetenzpruefung.odt}
 	\Isourcefile{Literaturdatenbank Robin}{files/header/Robin.bib}
-	\sourcefile{Teil Joshuah}{files/chapters/Joshuah/main.tex}
+	\Isourcefile{\hyperref[sec:Joshuah_Baermann]{Teil Joshuah}}%
+		{files/chapters/Joshuah/main-Joshuah.tex}
 	\Isourcefile{Literaturdatenbank Joshuah}{files/header/Joshuah.bib}
 	\sourcefile{\nameref{sec:reflexion}}{files/chapters/reflexion.tex}
-%	\Isourcefile{\nameref{sec:Planung-Recherche}}{files/chapters/Planung-Recherche.tex}
+	\Isourcefile{\nameref{sec:planning-enquiry}}{files/chapters/planning-enquiry.tex}
   \end{sourcefiletable}
 %}{}
 %\ifDraft{
