optimized the planning and enquiry chapter

--- a/files/header/Robin.bib
+++ b/files/header/Robin.bib
@@ -322,3 +322,14 @@
 	month		= {06},
 }
 
+@article{Medica:Handprothese_Wandel_der_Zeit,
+	keywords	= {Robin},
+%	author		= {},
+	title		= {Die Handprothese im Wandel der Zeit},
+	journaltitle	= {MEDICA Magazin},
+	url		= {http://www.medica.de/cipp/md_medica/custom/pub/content,oid,23170/lang,1/ticket,g_u_e_s_t/~/Die_Handprothese_im_Wandel_der_Zeit.html},
+	urldate		= {2012-04-29},
+	year		= {2007},
+	month		= {11},
+}
+
