enabled back links for all bibliographies

--- a/Kompetenzpruefung.tex
+++ b/Kompetenzpruefung.tex
@@ -32,6 +32,7 @@
 	style=authortitle-comp,
 	natbib=true,
 	backend=biber,
+	backref,
 ]{biblatex}
 \DeclareFieldFormat{urldate}{\mkbibparens{abgerufen am\space#1}}
 \defbibheading{source}{\section{Quellenverzeichnis}}
