enhanced my chapter

--- a/files/header/Robin.bib
+++ b/files/header/Robin.bib
@@ -333,3 +333,25 @@
 	month		= {11},
 }
 
+@book{Eschbach:Black_Out,
+	keywords	= {Robin},
+	author		= {Andreas Eschbach},
+	title		= {Black Out},
+	publisher	= {Arena Verlag},
+	location	= {Würzburg},
+	isbn		= {978-3401060620},
+	year		= {2010},
+	month		= {05},
+}
+
+@book{Eschbach:Hide_Out,
+	keywords	= {Robin},
+	author		= {Andreas Eschbach},
+	title		= {Hide Out},
+	publisher	= {Arena Verlag},
+	location	= {Würzburg},
+	isbn		= {978-3401065878},
+	year		= {2011},
+	month		= {11},
+}
+
