--- a/files/header/Robin.bib
+++ b/files/header/Robin.bib
@@ -335,6 +335,7 @@
 
 @book{Eschbach:Black_Out,
 	keywords	= {Robin},
+	options		= {skipbib=true},
 	author		= {Andreas Eschbach},
 	title		= {Black Out},
 	publisher	= {Arena Verlag},
@@ -346,6 +347,7 @@
 
 @book{Eschbach:Hide_Out,
 	keywords	= {Robin},
+	options		= {skipbib=true},
 	author		= {Andreas Eschbach},
 	title		= {Hide Out},
 	publisher	= {Arena Verlag},
