--- a/files/header/Hannah.bib
+++ b/files/header/Hannah.bib
@@ -68,11 +68,11 @@
 }
 
 @online{Wikipedia:Attraktivitaetsforschung,
-	keywords	= {Hannah},
+%	keywords	= {Hannah},
 	author		= {Wikipedia},
 	title		= {Attraktivitätsforschung},
 	url		= {http://de.wikipedia.org/w/index.php?title=Attraktivitaetsforschung&oldid=99586076},
-	urldate		= {2012-06-27},
+	urldate		= {2012-06-27}, %% URL wird über den Rand geschrieben
 }
 
 @online{Wikipedia:Attraktivitaet,
