--- a/files/header/Robin.bib
+++ b/files/header/Robin.bib
@@ -357,3 +357,15 @@
 	month		= {11},
 }
 
+@book{Crichton:Timeline,
+	keywords	= {Robin},
+	options		= {skipbib=true},
+	author		= {Michael Crichton},
+	translator	= {Klaus Berr},
+	title		= {Timeline},
+	publisher	= {Blessing Verlag},
+	location	= {München},
+	isbn		= {978-3896671134},
+	year		= {2000},
+}
+
