--- a/files/header/metainfos.tex
+++ b/files/header/metainfos.tex
@@ -1,12 +1,12 @@
 \readgitstat{7}
 \SetTITEL{Kompetenzprüfung}
-\SetAUTHOR{4}{Joshuah Bärmann, Hannah Haid, Robin Schneider}
+\SetAUTHOR{4}{Joshuah Bärmann, Hannah Haid, \Typesetter}
 \newcommand{\Betreuer}{Frau Inga Danielle Feger und Herrn Dr. Manfred Steingraber\xspace}
 \newcommand{\SchoolSubjects}{Biologie, Geschichte}
 \SetKLASSE{12}
 \SetSUBJECT{Veränderung und Beeinflussung des Menschen}
 \SetURL{http://robin.de.marissa.hostorama.ch/Klasse/12/Kompetenzpruefung.pdf}
-\SetLICENSE[Creative Commons BY-NC-SA]{CreativeCommons/by-nc-sa}{0}
+\SetLICENSE{CreativeCommons/by-nc-sa}{0}
 %% von Joshuah und Hannah mündlich akzeptiert
 \SetCREATEDATE{2011}{10}{18}{20}{46}{23}		%% {YYYY}{MM}{DD}{HH}{MM}{SS}
 \SetABGABEDATUM{2}{2012}{06}{29}{1}		%% um 12:45
