--- a/files/header/Joshuah.bib
+++ b/files/header/Joshuah.bib
@@ -73,7 +73,8 @@
 @online{Stuttgart:Manipulation,
 	keywords	= {Joshuah},
 %	author		= {Wikipedia},
-	title		= {Stuttgart Alles nur noch Manipulation?},
+	publisher	= {Staatsinstitut für Schulqualität und Bildungsforschung},
+	title		= {Alles nur noch Manipulation?},
 	url		= {http://www.medieninfo.bayern.de/download.asp?DownloadFileID=d74e384c6fa3276300c5093cee041ade},
 	urldate		= {2012-06-28},
 }
