--- a/files/header/Robin.bib
+++ b/files/header/Robin.bib
@@ -369,3 +369,14 @@
 	year		= {2000},
 }
 
+%% http://www.heise.de/newsticker/meldung/Koerper-als-Biobrennstoffzelle-1729858.html
+@article{Heise:Hummer_erzeugt_Strom,
+	keywords	= {Robin},
+	author		= {Nidhi Subbaraman},
+	title		= {Hummer erzeugt Strom},
+	journaltitle	= {Technology Review},
+	url		= {http://heise.de/-1729113},
+	urldate		= {2012-11-03},
+	year		= {2012},
+	month		= {11},
+}
