--- a/files/header/hacks.tex
+++ b/files/header/hacks.tex
@@ -23,3 +23,4 @@
 %% http://de.wikiquote.org/wiki/Evolution
 
 \renewcommand{\licenseadd}{, mit Ausnahme mancher Bilder,\xspace}
+\addtocounter{reversiongit}{36}
