--- a/files/header/metainfos.tex
+++ b/files/header/metainfos.tex
@@ -1,11 +1,12 @@
 \readgitstat{7}
+\SetGitURL{https://github.com/ypid/document-Kompetenzpruefung}
 \SetTITEL{Kompetenzprüfung}
 \SetAUTHOR{4}{Joshuah Bärmann, Hannah Haid, \Typesetter}
 \newcommand{\Betreuer}{Frau Inga Danielle Feger und Herrn Dr. Manfred Steingraber\xspace}
 \newcommand{\SchoolSubjects}{Biologie, Geschichte}
 \SetKLASSE{12}
 \SetSUBJECT{Veränderung und Beeinflussung des Menschen}
-\SetURL{http://robin.de.marissa.hostorama.ch/Klasse/12/Kompetenzpruefung.pdf}
+\SetURL{http://ypid.files.wordpress.com/2013/04/kompetenzpruefung.pdf}
 \SetLICENSE{CreativeCommons/by-nc-sa}{0}
 %% von Joshuah und Hannah mündlich akzeptiert
 \SetCREATEDATE{2011}{10}{18}{20}{46}{23}		%% {YYYY}{MM}{DD}{HH}{MM}{SS}
