--- a/Kompetenzpruefung.tex
+++ b/Kompetenzpruefung.tex
@@ -95,9 +95,9 @@ und stammt von Look Bellow.
   \Statistiken
   Status:~\progressbar{.97} (eigenes Ermessen) \\
   \begin{sourcefiletable}{1}
-	\sourcefile{Hauptdatei}{\jobname.tex}
+	\Isourcefile{Hauptdatei}{\jobname.tex}
     \Isourcefile{\LaTeX-Hacks}{files/header/hacks.tex}
-	\sourcefile{Metainformationen}{files/header/metainfos.tex}
+	\Isourcefile{Metainformationen}{files/header/metainfos.tex}
 	\Isourcefile{\hyperref[titlepage]{\Titlepagename}}{files/titlepage/titlepage.tex}
 	\Isourcefile{\nameref{sec:preface}}{files/chapters/preface.tex}
 	\Isourcefile{\hyperref[sec:Hannah_Haid]{Teil Hannah}}{files/chapters/Hannah/main-Hannah.tex}
