Renamed the main files for Wordpress.

--- a/kompetenzpruefung.tex
+++ b/kompetenzpruefung.tex
@@ -81,7 +81,7 @@
 
 \section*{Urheberrechte und Lizenzhinweise}
 Das Bild \enquote{\href{\URLTitlepageBG}{Der vitruvianische Mensch}},
-das auf der \hyperref[titlepage]{Titelseite} abgebildet ist, steht unter
+das auf der \hyperref[titlepage]{Titelseite} abgebildet ist, steht unter einer
 \href{http://creativecommons.org/licenses/by-sa/3.0/deed.de}{Creative Commons BY-SA 3.0}
 und stammt von Look Bellow.
 
